# wato_f1tenth

./: .gitignore  .gitmodules  README.md  Running Tests Tutorial.md  backup.txt  diana  linux.setup.md  manual.md  raceline-gen.md  setup-linux.md  setup-windows.md  system-architecture.md  watod  watod-config.sh
.github/templates/docker_context/: docker_context.sh
.github/templates/test/: test_image.sh
.github/workflows/: build_test.yml  linting_auto.yml
config/: ekf_testing.json
config/sample_settings/: c_cpp_properties.json  settings.json
docker/: wato_ros_entrypoint.sh
docker/robot/: robot.Dockerfile
docker/samples/: cpp_aggregator.Dockerfile  cpp_producer.Dockerfile  cpp_transformer.Dockerfile  py_aggregator.Dockerfile  py_producer.Dockerfile  py_transformer.Dockerfile
docker/sim/: sim.Dockerfile  sim_autodrive.Dockerfile  sim_autodrive_entrypoint.sh  sim_ros_entrypoint.sh
docker/vis_tools/: foxglove.Dockerfile
dockerfiles/: entry_point.sh  foxglove.Dockerfile  robot.Dockerfile
install/: local_setup.sh  setup.sh
install/foxglove_msgs/share/foxglove_msgs/: package.sh  package.xml
install/foxglove_msgs/share/foxglove_msgs/cmake/: foxglove_msgsConfig.cmake
log/: latest_build  latest_list
modules/: docker-compose.foxglove.yaml  docker-compose.robot.yaml  docker-compose.sim.yaml  docker-compose.vis_tools.yaml  docker-compose.yaml
scripts/: clean-temp.sh  docker-attach.sh  git-copy.sh  title.txt
src/: mapper_params_online_async2.yaml
src/config/: sim.yaml
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/my_node/: CMakeLists.txt  package.xml
src/my_node/src/: imu_drive.cpp
src/robot/: my_slam_map.pgm  my_slam_map.yaml
src/robot/ackermann_conterter/: CMakeLists.txt  package.xml
src/robot/ackermann_ekf/: CMakeLists.txt  package.xml
src/robot/action/: CMakeLists.txt  package.xml  setup.py
src/robot/bringup_robot/: CMakeLists.txt  my_map.pgm  my_map.yaml  package.xml
src/robot/costmap/: CMakeLists.txt  package.xml
src/robot/costmap copy/: package.xml
src/robot/costmap/config/: params.yaml
src/robot/costmap/include/: costmap_node.hpp
src/robot/costmap/src/: costmap_node.cpp
src/robot/emergency_brake/: package.xml  setup.py
src/robot/emergency_braking/: CMakeLists.txt  package.xml
src/robot/emergency_braking/include/: emergency_braking.hpp
src/robot/emergency_braking/src/: emergency_braking.cpp  obstacle_publisher.cpp  old_code_braking.py  old_code_obstacle.py  test_drive.cpp
src/robot/gamepad/: CMakeLists.txt  package.xml
src/robot/gamepad/include/: gamepad_node.hpp  joypad_teleop.hpp
src/robot/gamepad/src/: gamepad_node.cpp  joypad_teleop.cpp
src/robot/global_planner/: CMakeLists.txt
src/robot/gym_vis/: CMakeLists.txt  package.xml
src/robot/gym_vis/assets/: foxgloveTest.csv
src/robot/gym_vis/include/: car_vis.hpp  gym_vis.hpp
src/robot/gym_vis/src/: car_vis.cpp  gym_vis.cpp
src/robot/gym_vis/test/: test_gym_vis.cpp
src/robot/hybrid-a-star/: CMakeLists.txt  package.xml
src/robot/imu_printer_py/: package.xml  setup.cfg  setup.py
src/robot/imu_throttle/: CMakeLists.txt  imu_throttle.cpp  package.xml
src/robot/imu_throttle/include/: imu_throttle.hpp
src/robot/imu_throttle/src/: imu_throttle.cpp
src/robot/local_planner/: CMakeLists.txt  package.xml
src/robot/local_planner/config/: local_planner.yaml
src/robot/local_planner/include/local_planner/: collision_checker.hpp  local_planner_core.hpp  local_planner_node.hpp  rrt_planner.hpp  types.hpp
src/robot/local_planner/src/: collision_checker.cpp  local_planner_core.cpp  local_planner_node.cpp  rrt_planner.cpp
src/robot/local_planning/: CMakeLists.txt  local_planning.json  local_planning_map_obstacles.json  package.xml
src/robot/local_planning/action/: PlanPath.action
src/robot/local_planning/config/: hybrid_astar_planner.yaml
src/robot/local_planning/include/planning/: frenet_converter.hpp  hybrid_astar_planner_code.hpp  hybrid_astar_planner_node.hpp  local_frenet_lattice_planner.hpp  state_manager_code.hpp  state_manager_node.hpp  types.hpp
src/robot/local_planning/include/planning/planner/: collision_checker.hpp  edge_evaluator.hpp  frenet_hybrid_astar_planner.hpp  local_frenet_lattice_planner.hpp  local_planner.hpp  planner_costs.hpp  planner_node.hpp  quintic_polynomial.hpp
src/robot/local_planning/include/planning/state_manager/: state_manager_code.hpp  state_manager_node.hpp
src/robot/local_planning/msg/: PlannerDiagnostics.msg
src/robot/local_planning/src/: frenet_converter.cpp  hybrid_astar_planner.cpp  hybrid_astar_planner_node.cpp  local_frenet_lattice_planner.cpp  occupancy_grid_frame_adapter.cpp  scan_to_occupancy_grid.cpp  sim_obstacle_overlay.cpp  state_manager_code.cpp  state_manager_node.cpp
src/robot/local_planning/src/planner/: collision_checker.cpp  edge_evaluator.cpp  frenet_hybrid_astar_planner.cpp  local_frenet_lattice_planner.cpp  planner_costs.cpp  planner_node.cpp  quintic_polynomial.cpp
src/robot/local_planning/src/state_manager/: state_manager_code.cpp  state_manager_node.cpp
src/robot/map/: same_map.pgm  same_map.yaml  serial_map.data
src/robot/odom_listener_pkg/: CMakeLists.txt  package.xml
src/robot/odom_listener_pkg/src/: odom_listener_node.cpp
src/robot/planning/: CMakeLists.txt  package.xml
src/robot/planning/include/: car.hpp  common.hpp  curve_gen.hpp  map.hpp  planning_main.hpp
src/robot/planning/src/: car.cpp  curve_gen.cpp  map.cpp  planning_main.cpp
src/robot/pure-persuit/: CMakeLists.txt  package.xml
src/robot/pure_persuit/: CMakeLists.txt  package.xml
src/robot/pure_pursuit/: CMakeLists.txt  package.xml
src/robot/reactive_collision_avoidance/: reactColAvoid.hpp
src/robot/safety/: CMakeLists.txt  package.xml
src/robot/safety_system/: CMakeLists.txt
src/robot/sim_util/: CMakeLists.txt  package.xml
src/robot/sim_util/include/: ackermann_converter.hpp  fake_odom.hpp
src/robot/sim_util/src/: ackermann_converter.cpp  fake_odom.cpp  scan_remap.cpp
src/rosbag_recorder/: package.xml  setup.py
tutorials/: remote.md
(+344 files in other folders)
