<?xml version="1.0"?>
<package format="2">
    <name>imu_throttle</name>
    <version>0.0.0</version>
    <description>IMU package, prints to terminal and drives car</description>
    <maintainer email="swalia@watonomous.ca">Shivam Walia</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
</package>